--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <small>Error message</small>
         </div>
         <div class="form-control">
-          <label for="Email">Email</label>
-          <input type="text" id="Email" placeholder="Enter Email" />
+          <label for="email">E-mail</label>
+          <input type="text" id="email" placeholder="Enter e-mail" />
           <small>Error message</small>
         </div>
         <div class="form-control">
